footer gap fixed

--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -168,6 +168,10 @@
             .site_map {
                 display: none;
             }
+
+            .footer_text {
+                gap: 12px;
+            }
         }
     }
 }
